# Kartezio

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  baseline.py  pyproject.toml  setup.cfg  test_sequential.py
.github/workflows/: dev-workflow.yml  master-workflow.yml  python-package.yml
examples/: trainer.py
examples/components/: create_endpoint.py  create_primitive.py
examples/inference/: load_model.py
examples/training/: advanced_trainer.py  basic_trainer.py
src/: __init__.py  model.py
src/kartezio/: __init__.py  callback.py  dataset.py  easy.py  endpoint.py  enums.py  export.py  fitness.py  helpers.py  inference.py  metric.py  mutation.py  plot.py  population.py  preprocessing.py  readers.py  reduction.py  stacker.py  strategy.py  training.py  types.py
src/kartezio/apps/: classification.py  counting.py  instance_segmentation.py  segmentation.py
src/kartezio/cli/: dataset.py  graph.py  insight.py  movie.py  movie_graph.py  pack.py
src/kartezio/components/: base.py  core.py  dataset.py  endpoint.py  genotype.py  initializer.py  library.py  preprocessor.py  primitive.py  reducer.py
src/kartezio/core/: base.py  builder.py  components.py  components_old.py  decoder.py  endpoints.py  evolution.py  fitness.py  helpers.py  initialization.py  population.py  reducer.py  sequential.py  strategy.py  types.py
src/kartezio/core/components/: adapter.py  aggregation.py  base.py  dataset.py  decoder.py  endpoint.py  genotype.py  initialization.py  library.py  preprocessing.py  primitive.py  reduction.py
src/kartezio/core/mutation/: base.py  behavior.py  decay.py  effect.py
src/kartezio/data/: dataset.py
src/kartezio/drive/: directory.py  image.py
src/kartezio/evolution/: base.py  decoder.py  fitness.py  population.py  strategy.py
src/kartezio/image/: bundle.py  kernel.py  nodes.py
src/kartezio/improc/: common.py  kernel.py  primitives.py
src/kartezio/libraries/: array.py  fourier.py  scalar.py
src/kartezio/model/: base.py  builder.py  components.py  components_old.py  evolution.py  helpers.py  library.py  population.py  primitive.py  registry.py  sequential.py  strategy.py  types.py
src/kartezio/model/components/: aggregation.py  base.py  decoder.py  endpoint.py  genotype.py  library.py  preprocessing.py  primitive.py
src/kartezio/model/mutation/: base.py  behavior.py  decay.py
src/kartezio/mutation/: base.py  behavioral.py  decay.py  edges.py  effect.py  handler.py
src/kartezio/primitives/: array.py  fourier.py  matrix.py  scalar.py
src/kartezio/utils/: dataset.py  directory.py  image.py  imagej.py  io.py  json_handler.py  json_utils.py  viewer.py
src/kartezio/vision/: colors.py  common.py  decoder.toml  dtype.py  hough.py  kernel.py  metrics.py  primitives.py  rescale.py  watershed.py  watershed_3d.py
tests/: test_components.py  test_genotype.py  test_integration.py  test_runner.py  test_security.py  test_sequential.py
tests/components/: test_endpoint.py  test_library.py  test_reader.py
