[tool.poetry]
name = "kartezio"
version = "1.0.0a2"
description = ""
homepage = "https://kartezio.com"
repository = "https://github.com/KevinCortacero/Kartezio"
authors = ["Kevin Cortacero <kevin.cortacero@protonmail.com>"]
readme = "README.md"
packages = [{include = "kartezio", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.24.0"
pandas = "*"
scikit-image = "*"
opencv-python = "*"
numba = "*"
czifile = "^2019.7.2"
tabulate = "^0.9.0"
roifile = ">=2023.2.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
mypy = "^1.10.0"
flake8 = ">=5.0.4"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
pre-commit = "*"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
