[project]
name = "kartezio"
version = "1.0.1"
description = ""
authors = [{ name = "Kevin Cortacero", email = "kevin@mantalys.fr" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "scikit-image",
    "opencv-python",
    "numba",
    "matplotlib",
    "czifile",
    "tabulate",
    "roifile",
    "codecarbon"
]

[project.urls]
Homepage = "https://kartezio.com"
Repository = "https://github.com/KevinCortacero/Kartezio"


[tool.hatch.build.targets.sdist]
include = ["src/kartezio"]

[tool.hatch.build.targets.wheel]
include = ["src/kartezio"]

[tool.hatch.build.targets.wheel.sources]
"src/kartezio" = "kartezio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
