[metadata]
name = kartezio
version = 1.0.0a1
description = A CGP Framework for Image Processing
long_description = file: README.md
long_description_content_type = text/markdown
author = Kevin Cortacero
author_email = kevin.cortacero@inserm.fr
maintainer = Kevin Cortacero
maintainer_email = kevin.cortacero@inserm.fr
license_file = LICENSE
platforms = any
requires-python = >=3.7
classifiers =
    Programming Language::Python::3.7
keywords = Machine Learning, Cartesian Genetic Programming, Computer Vision
project_urls =
    Source=https://github.com/KevinCortacero/Kartezio
    Tracker=https://github.com/KevinCortacero/Kartezio/issues


[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
    scipy
    scikit-image
    matplotlib
    numba
    numena
    scikit-learn
    tabulate


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kartezio-dataset = kartezio.cli.dataset:main
    kartezio-pack = kartezio.cli.pack:main
    kartezio-graph = kartezio.cli.graph:main
    kartezio-insight = kartezio.cli.insight:main
